--- a/polymer-parent/vyne-app/src/app/type-list/source-view.component.html
+++ b/polymer-parent/vyne-app/src/app/type-list/source-view.component.html
@@ -1,7 +1,7 @@
 <div class="source-viewer">
   <!-- TODO : Add support for highlighting taxi -->
   <div *ngFor="let source of schemaMember.sources">
-    <span class="source-origin">As defined by {{source.origin}} </span>
+    <span class="source-origin">As defined by service <span class="service-name">{{source.origin}}</span></span>
     <td-highlight lang="typescript">
       {{ source.content }}
     </td-highlight>
