--- a/polymer-parent/vyne-app/src/app/theme.scss
+++ b/polymer-parent/vyne-app/src/app/theme.scss
@@ -3,7 +3,7 @@
 
 $body-bg: #f5f6fa;
 
-$mono: 'Nanum Gothic Coding', mono;
+$mono: 'Anonymous Pro', monospace;
 
 .page-content {
   padding: 46px;
