--- a/vyne-parent/vyne-query-service/src/main/web/src/app/vyne/vyne.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/vyne/vyne.component.scss
@@ -4,8 +4,21 @@
   height: 100%;
 }
 
+.logo {
+  img {
+    vertical-align: middle;
+    width: 42px;
+    padding-right: 10px;
+  }
+  span {
+    vertical-align: middle;
+    font-weight: 600;
+  }
+
+}
+
 .sidenav {
-  width: 96px;
+  width: 160px;
   background-color: #222c3c;
 }
 
@@ -27,11 +40,14 @@
   text-align: center;
   //font-family: $body-font;
   color: white;
-  font-size: 11px;
+  font-size: 1rem;
   font-weight: 400;
   padding-bottom: 45px;
   a {
     i {
+      img {
+        width: 32px;
+      }
       display: block;
       padding-bottom: 10px;
     }
@@ -39,4 +55,12 @@
       color: #8cc63e;
     }
   }
+}
+
+.appInfo {
+  position: absolute;
+  bottom: 0px;
+  font-size: 0.8rem;
+  color: rgba(255,255,255,0.6);
+  padding: 15px;
 }
