--- a/vyne-parent/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/styles.scss
@@ -8,11 +8,11 @@ html, body {
 
 body {
   margin: 0;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 $custom-typography: mat-typography-config(
-  $font-family: 'Open Sans, sans-serif',
+  $font-family: 'Nunito, sans-serif',
   $headline: mat-typography-level(32px, 48px, 700),
   $body-1: mat-typography-level(16px, 24px, 500)
 );
