add display of messages for unsuccessful queries.
Resolves #30

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="result-status unsuccessful-search" *ngIf="isUnsuccessfulSearch">
     <i class="material-icons">error_outline</i>
-    <span>{{ result.message }}</span>
+    <span>Couldn't find a path for the following types: {{ unmatchedNodes }}</span>
   </div>
 
   <div class="results-container">
