fix z-indexing, when scrolling content appeared above toolbar

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" style="z-index: 1">
   <span>Query wizard</span>
 </mat-toolbar>
-<div class="page-content">
+<div class="page-content" style="z-index: 0">
   <div class="row">
     <div class="container fact-forms-container">
       <mat-card>
