--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
@@ -36,42 +36,45 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card *ngIf="result">
-    <mat-card-header>
-      <mat-card-title>Profiler</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="results-tree">
-        <mat-nested-tree-node *matTreeNodeDef="let node;">
-          <div class="operation-container">
-            <div class="description">{{ node.operationName }}</div>
-            <div class="duration">{{ node.duration}}ms</div>
-            <div class="profile-step-results-container">
+  <!-- Commenting out the Profiler, as we're not currently returning profile objects from the server, given the verbosity.
+  Will add this back if/when we have a better solution -->
 
-            </div>
-            <div class="context-container">
-              <button mat-button *ngFor="let contextKey of objectKeys(node.context)">{{contextKey}}</button>
+  <!--<mat-card *ngIf="result">-->
+    <!--<mat-card-header>-->
+      <!--<mat-card-title>Profiler</mat-card-title>-->
+    <!--</mat-card-header>-->
+    <!--<mat-card-content>-->
+      <!--<mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="results-tree">-->
+        <!--<mat-nested-tree-node *matTreeNodeDef="let node;">-->
+          <!--<div class="operation-container">-->
+            <!--<div class="description">{{ node.operationName }}</div>-->
+            <!--<div class="duration">{{ node.duration}}ms</div>-->
+            <!--<div class="profile-step-results-container">-->
 
-            </div>
-            <div class="expand-button" *ngIf="hasChildren(node)" matTreeNodeToggle>
-              <div><span>{{ node.children.length }} more</span>
-                <button mat-icon-button>
-                  <mat-icon class="mat-icon-rtl-mirror">
-                    {{nestedTreeControl.isExpanded(node) ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}
-                  </mat-icon>
-                </button>
-              </div>
+            <!--</div>-->
+            <!--<div class="context-container">-->
+              <!--<button mat-button *ngFor="let contextKey of objectKeys(node.context)">{{contextKey}}</button>-->
 
-            </div>
-            <div [class.results-tree-invisible]="!nestedTreeControl.isExpanded(node)">
-              <ng-container matTreeNodeOutlet></ng-container>
-            </div>
-          </div>
-        </mat-nested-tree-node>
-      </mat-tree>
-    </mat-card-content>
+            <!--</div>-->
+            <!--<div class="expand-button" *ngIf="hasChildren(node)" matTreeNodeToggle>-->
+              <!--<div><span>{{ node.children.length }} more</span>-->
+                <!--<button mat-icon-button>-->
+                  <!--<mat-icon class="mat-icon-rtl-mirror">-->
+                    <!--{{nestedTreeControl.isExpanded(node) ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}-->
+                  <!--</mat-icon>-->
+                <!--</button>-->
+              <!--</div>-->
 
-  </mat-card>
+            <!--</div>-->
+            <!--<div [class.results-tree-invisible]="!nestedTreeControl.isExpanded(node)">-->
+              <!--<ng-container matTreeNodeOutlet></ng-container>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</mat-nested-tree-node>-->
+      <!--</mat-tree>-->
+    <!--</mat-card-content>-->
+
+  <!--</mat-card>-->
 
 
 </div>
