--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
@@ -26,33 +26,37 @@
           </div>
         </div>
       </mat-expansion-panel-header>
-      <div>
-        <mat-tab-group dynamicHeight="true">
-          <mat-tab label="Properties" *ngIf="member.kind == 'TYPE'">
-            <ng-template matTabContent>
-              <type-property-view [schemaMember]="member"></type-property-view>
-            </ng-template>
-          </mat-tab>
-          <mat-tab label="Parameters" *ngIf="member.kind == 'OPERATION'">
-            <ng-template matTabContent>
-              <parameter-view [schemaMember]="member"></parameter-view>
-            </ng-template>
-          </mat-tab>
-          <mat-tab label="Source">
-            <ng-template matTabContent>
-              <type-source-view [schemaMember]="member"></type-source-view>
-            </ng-template>
-          </mat-tab>
-          <mat-tab label="Links">
-            <ng-template matTabContent>
-              <type-links [member]="member"></type-links>
-            </ng-template>
-          </mat-tab>
-        </mat-tab-group>
-      </div>
-      <mat-action-row>
-        <button mat-button color="primary" (click)="startNewQuery(member)">Start a query</button>
-      </mat-action-row>
+      <ng-template matExpansionPanelContent>
+        <div>
+          <mat-tab-group dynamicHeight="true">
+            <mat-tab label="Properties" *ngIf="member.kind == 'TYPE'">
+              <ng-template matTabContent>
+                <type-property-view [schemaMember]="member"></type-property-view>
+              </ng-template>
+            </mat-tab>
+            <mat-tab label="Parameters" *ngIf="member.kind == 'OPERATION'">
+              <ng-template matTabContent>
+                <parameter-view [schemaMember]="member"></parameter-view>
+              </ng-template>
+            </mat-tab>
+            <mat-tab label="Source">
+              <ng-template matTabContent>
+                <type-source-view [schemaMember]="member"></type-source-view>
+              </ng-template>
+            </mat-tab>
+            <mat-tab label="Links">
+              <ng-template matTabContent>
+                <type-links [member]="member"></type-links>
+              </ng-template>
+            </mat-tab>
+          </mat-tab-group>
+        </div>
+        <mat-action-row>
+          <button mat-button color="primary" (click)="startNewQuery(member)">Start a query</button>
+        </mat-action-row>
+      </ng-template>
+
+
     </mat-expansion-panel>
     <div *ngIf="members.length === 0" class="empty-state">
       <img src="assets/img/getting-started.svg">
