--- a/vyne-parent/vyne-query-service/src/main/web/src/app/theme.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/theme.scss
@@ -20,7 +20,7 @@ $grey-3: #12345f;
 // https://coolors.co/60b609-274060-54457f-282a3a-e66641
 $vyne-green: rgba(96, 182, 9, 1);
 $color2: rgba(39, 64, 96, 1);
-$color3: rgba(84, 69, 127, 1);
+  $color3: rgba(84, 69, 127, 1);
 $color4: rgba(40, 42, 58, 1);
 $color5: rgba(230, 102, 65, 1);
 
@@ -57,6 +57,10 @@ $light-purple-grey-300: #dee3ef;
     box-shadow: 0 2px 5px #dcdcdc;
     color: #fafafa;
   }
+}
+
+mat-button-toggle-group.selector-button {
+  border-radius: 20px;
 }
 
 $light-grey-1: mat-color($vyne-grey-blue-palette, 50);
