--- a/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/query-wizard/query-wizard.component.scss
@@ -63,6 +63,9 @@
 .new-fact-editor {
   width: 100%;
 
+  app-type-autocomplete {
+    width: 100%;
+  }
   .mat-form-field {
     width: 100%;
   }
