--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-editor.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-editor.component.scss
@@ -10,6 +10,11 @@
   padding-bottom: 8px;
 }
 
-::ng-deep .mat-form-field-infix {
-  border-top: none;
+//::ng-deep .mat-form-field-infix {
+//  border-top: none;
+//}
+
+.title-form-field {
+  width: 100%;
+  margin-bottom: 30px;
 }
