--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
@@ -21,6 +21,10 @@ mat-toolbar {
   }
 }
 
+.policy-editor-container {
+  flex-grow: 1;
+}
+
 .policy-list-member {
   padding: 10px;
   border-bottom: 1px solid $light-purple-grey-300;
