--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/statement-display.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/statement-display.component.scss
@@ -26,3 +26,11 @@
   background-color: rgba($vyne-lilac, 0.1);
   cursor: pointer;
 }
+
+.prefix-word {
+  padding-right: 20px;
+}
+
+.hint {
+  color: rgba(0, 0, 0, 0.4);
+}
