--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-editor.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-editor.component.scss
@@ -18,3 +18,10 @@
   width: 100%;
   margin-bottom: 30px;
 }
+
+.button-container {
+  button {
+    margin-right: 8px;
+  }
+  margin-top: 20px;
+}
