- spring security integration for fact providers  - policy editor no longer allows multiple policies

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/type-list/type-list.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/type-list/type-list.component.scss
@@ -76,7 +76,7 @@ mat-toolbar {
   .member-package {
     font-family: $mono;
     font-size: 0.7rem;
-    color: $grey-1
+    color: $dark-grey-1
   }
   .member-type-alias {
     vertical-align: middle;
