--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
@@ -15,10 +15,6 @@ mat-toolbar {
   width: 250px;
   height: 100%;
   padding: 20px;
-
-  .add-new {
-    padding-bottom: 20px;
-  }
 }
 
 .policy-editor-container {
@@ -46,3 +42,14 @@ mat-toolbar {
   padding-right: 20px;
 }
 
+.empty-state {
+  text-align: center;
+  width: 100%;
+
+  padding: 20px 0;
+
+  .button-container {
+    padding-top: 20px;
+  }
+
+}
