--- a/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/policy-manager/policy-manager.component.scss
@@ -7,7 +7,7 @@ mat-toolbar {
 
 .content {
   padding: 20px;
-  display: flex;
+  //display: flex;
 }
 .policy-list {
   background-color: $light-purple-grey;
