fix schema name overflowing in component

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
@@ -17,7 +17,7 @@
       <div *ngFor="let schema of schemas | async" class="schema-list-member"
            [ngClass]="selectedSchema == schema ? 'selected' : ''"
            (click)="selectSchema(schema)">
-        <div class="schema-name">{{ schema.name }}</div>
+        <div class="schema-name" [matTooltip]="schema.name">{{ schema.name }}</div>
         <div class="schema-version">{{ schema.version }}</div>
       </div>
     </div>
